fixed logo on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,13 @@ nav {
   box-shadow: -5px 2px 10px 0px black;
 }
 
+@media (max-width: 500px) {
+  nav {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -57,7 +64,7 @@ table {
   width: 90%;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   table {
     font-size: 0.75em;
     margin-top: 5px;
@@ -94,17 +101,19 @@ th {
   display: flex;
   height: 100%;
   width: 15%;
-  flex-shrink: 0;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .logo__container {
-    width: 35%;
+    width: 50%;
+    display: flex;
+  }
+  .navbar__logo {
+    width: 100%;
   }
 }
 
 .navList {
-  flex-grow: 1;
   position: relative;
   z-index: 1;
   display: flex;
@@ -135,11 +144,13 @@ th {
   border-radius: 10px;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .navList {
-    margin: 10px;
+    justify-content: flex-end;
     background-color: none;
     box-shadow: none;
+    width: 50%;
+    margin: 0px;
   }
   .navButton__icon {
     margin: 5px;
@@ -188,9 +199,12 @@ th {
   transform: translateX(50px);
 }
 
-@media screen and (max-width: 400px) {
+@media (max-width: 500px) {
   .navPrices__slider {
     display: none;
+  }
+  .navPrices {
+    width: 0%;
   }
 }
 
@@ -250,7 +264,7 @@ th {
   font-size: 0.75em;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .coin__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -347,7 +361,7 @@ th {
   height: 100%;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .body {
     flex-direction: column;
   }
@@ -365,7 +379,7 @@ th {
   box-shadow: 0px 0px 10px 0px black;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .wallet {
     width: 100%;
     height: 25%;
@@ -430,7 +444,7 @@ th {
   color: var(--white);
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
   .wallet__title {
   }
 }
@@ -454,7 +468,7 @@ th {
   align-items: center;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .content {
     width: 100%;
     height: 65%;
